Panning the viewport should not rotate grease pencil view aligned canvas orientation #85082

Closed
opened 2021-01-26 16:50:28 +01:00 by Thomas Mann · 5 comments

System Information
Operating system: Win10 / AMD Ryzon
Graphics card: ATI

Blender Version
Broken: (example: 2.91, 0f45****, master, 2020-11-25,

Short description of error
The grease pencil canvas orientation does only work when it is positioned in the center of the view. Panning the view will invisibly rotate the canvas and thus result in distorted drawings.
Since there is no visual indication for this behavior, it frequently leads to misplaced drawings.

Exact steps for others to reproduce the error

  1. Start Blender
  2. Create Grease pencil objects
  3. Enable canvas in View
  4. Start drawing
  5. Pan (not rotate) view
  6. Draw again
  • The second drawing is rotated but should be in the same plane as the first one.

Here is a video capture: https://youtu.be/aqH126nQqp4

**System Information** Operating system: Win10 / AMD Ryzon Graphics card: ATI **Blender Version** Broken: (example: 2.91, 0f45****, master, 2020-11-25, **Short description of error** The grease pencil canvas orientation does only work when it is positioned in the center of the view. Panning the view will invisibly rotate the canvas and thus result in distorted drawings. Since there is no visual indication for this behavior, it frequently leads to misplaced drawings. **Exact steps for others to reproduce the error** 1. Start Blender 2. Create Grease pencil objects 3. Enable canvas in View 4. Start drawing 5. Pan (not rotate) view 6. Draw again - > The second drawing is rotated but should be in the same plane as the first one. Here is a video capture: https://youtu.be/aqH126nQqp4
Author

Added subscriber: @pixtur

Added subscriber: @pixtur
Thomas Mann changed title from Panning the viewport should not rotate grease pencil orientation to Panning the viewport should not rotate grease pencil view aligned canvas orientation 2021-01-26 17:06:09 +01:00
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by 23e108c5b6

This issue was referenced by 23e108c5b608e58ae46f11a0f2badde6710b7495

This issue was referenced by ef28da2623

This issue was referenced by ef28da262342447bd3a666f5069d6012d71e1781
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Falk David self-assigned this 2021-01-26 18:33:15 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#85082
No description provided.